Fixed information card compatability on mobile devices

--- a/src/app/components/information-card/information-card.component.css
+++ b/src/app/components/information-card/information-card.component.css
@@ -6,3 +6,9 @@
 hr {
     max-width: 40rem;
 }
+
+@media (max-width: 420px) {
+  .d-flex {
+    flex-direction: column;
+  }
+}
